<resources>
    <string name="app_name">Bataille Navale</string>
    <string name="menu_gauche"><![CDATA[<]]></string>
    <string name="menu_droit"><![CDATA[>]]></string>
    <string name="partie_rapide">Partie rapide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jouer">Jouer</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="flotte1">Flotte 1</string>
    <string name="flotte2">Flotte 2</string>
    <string name="flotte3">Flotte 3</string>
    <string name="flotte4">Flotte 4</string>
    <string name="back">Back</string>
    <string name="save">Save and Use</string>
    <string name="configuration_de_la_flotte">Configuration de la flotte :</string>
    <string name="_1">1</string>
    <string name="menu">MENU</string>
    <string name="flotte_1">Flotte 1</string>
</resources>