<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/game_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/background_menu"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_gauche"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/partie_rapide"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_droit"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom"
            >

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="137sp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_dialer"
                />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="137sp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_dialer"
                />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="137sp"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_dialer"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>